@@ -186,19 +186,10 @@ name|defaultsName
 init|=
 literal|"indexDefaults"
 decl_stmt|;
-DECL|field|DEFAULT_MERGE_POLICY_CLASSNAME
-specifier|public
-specifier|static
+DECL|field|defaultMergePolicyClassName
 specifier|final
 name|String
-name|DEFAULT_MERGE_POLICY_CLASSNAME
-init|=
-name|LogByteSizeMergePolicy
-operator|.
-name|class
-operator|.
-name|getName
-argument_list|()
+name|defaultMergePolicyClassName
 decl_stmt|;
 DECL|field|DEFAULT_MERGE_SCHEDULER_CLASSNAME
 specifier|public
@@ -285,6 +276,15 @@ expr_stmt|;
 name|mergeSchedulerInfo
 operator|=
 literal|null
+expr_stmt|;
+name|defaultMergePolicyClassName
+operator|=
+name|TieredMergePolicy
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
 expr_stmt|;
 block|}
 DECL|field|luceneVersion
@@ -405,6 +405,31 @@ operator|=
 name|solrConfig
 operator|.
 name|luceneMatchVersion
+expr_stmt|;
+name|defaultMergePolicyClassName
+operator|=
+name|luceneVersion
+operator|.
+name|onOrAfter
+argument_list|(
+name|Version
+operator|.
+name|LUCENE_33
+argument_list|)
+condition|?
+name|TieredMergePolicy
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+else|:
+name|LogByteSizeMergePolicy
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
 expr_stmt|;
 name|useCompoundFile
 operator|=
@@ -996,9 +1021,7 @@ name|mergePolicyInfo
 operator|==
 literal|null
 condition|?
-name|SolrIndexConfig
-operator|.
-name|DEFAULT_MERGE_POLICY_CLASSNAME
+name|defaultMergePolicyClassName
 else|:
 name|mergePolicyInfo
 operator|.
@@ -1064,23 +1087,6 @@ expr_stmt|;
 block|}
 if|if
 condition|(
-name|mergePolicyInfo
-operator|!=
-literal|null
-condition|)
-name|SolrPluginUtils
-operator|.
-name|invokeSetters
-argument_list|(
-name|policy
-argument_list|,
-name|mergePolicyInfo
-operator|.
-name|initArgs
-argument_list|)
-expr_stmt|;
-if|if
-condition|(
 name|policy
 operator|instanceof
 name|LogMergePolicy
@@ -1130,16 +1136,80 @@ name|mergeFactor
 argument_list|)
 expr_stmt|;
 block|}
+elseif|else
+if|if
+condition|(
+name|policy
+operator|instanceof
+name|TieredMergePolicy
+condition|)
+block|{
+name|TieredMergePolicy
+name|tieredMergePolicy
+init|=
+operator|(
+name|TieredMergePolicy
+operator|)
+name|policy
+decl_stmt|;
+name|tieredMergePolicy
+operator|.
+name|setUseCompoundFile
+argument_list|(
+name|useCompoundFile
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|mergeFactor
+operator|!=
+operator|-
+literal|1
+condition|)
+block|{
+name|tieredMergePolicy
+operator|.
+name|setMaxMergeAtOnce
+argument_list|(
+name|mergeFactor
+argument_list|)
+expr_stmt|;
+name|tieredMergePolicy
+operator|.
+name|setSegmentsPerTier
+argument_list|(
+name|mergeFactor
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 else|else
 block|{
 name|log
 operator|.
 name|warn
 argument_list|(
-literal|"Use of compound file format or mergefactor cannot be configured if merge policy is not an instance of LogMergePolicy. The configured policy's defaults will be used."
+literal|"Use of compound file format or mergefactor cannot be configured if merge policy is not an instance of LogMergePolicy or TieredMergePolicy. The configured policy's defaults will be used."
 argument_list|)
 expr_stmt|;
 block|}
+if|if
+condition|(
+name|mergePolicyInfo
+operator|!=
+literal|null
+condition|)
+name|SolrPluginUtils
+operator|.
+name|invokeSetters
+argument_list|(
+name|policy
+argument_list|,
+name|mergePolicyInfo
+operator|.
+name|initArgs
+argument_list|)
+expr_stmt|;
 return|return
 name|policy
 return|;
